kqed_dev4/src/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This is used for the Drive Premium record type.</description>
        <inlineHelpText>What is the Drive Premium Type?</inlineHelpText>
        <label>DP Category</label>
        <picklist>
            <picklistValues>
                <fullName>A - Angel Bonuses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Compact Discs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Compact Discs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - Grub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q - Free Bonuses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R - Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S - Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T - Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V - Vacations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Compact Discs (4-Packs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clone_PO__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Id &amp; &quot;/e?clone=1&amp;retURL=00OA0000004KUuf&quot;, &quot;Clone PO&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Date__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>When was this confirmed?</inlineHelpText>
        <label>Confirm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>This is the Business Contact related to these products. Primarily used for Drive Premium providers.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Gift_Cert__c</fullName>
        <formula>IF( TEXT(Status__c) = &quot;Confirmed&quot; &amp;&amp;  Need_to_Print__c=TRUE,
HYPERLINK(&quot;https://www.appextremes.com/apps/Conga/PointMerge.aspx&quot; &amp;
&quot;?sessionId=&quot; &amp; $Api.Session_ID &amp;
&quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp;
&quot;&amp;id=&quot; &amp;  Vendor__r.Id  &amp;
&quot;&amp;queryID=[gc]a0hA00000015emb?pv0=&quot; &amp;  Id &amp;
&quot;&amp;templateID=a0NA0000007nTud&quot; &amp;
&quot;&amp;OFN=Gift+Certificate+-+&quot; &amp; Name &amp;
&quot;&amp;OCNR=1&quot;, &quot;Create Gift Cert&quot;, &quot;_blank&quot;),
&quot;&quot;)</formula>
        <label>Create Gift Cert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_Campaign__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>What Drive Campaign is this Premium related to?</inlineHelpText>
        <label>Drive Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Receiving_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Receive_Date__c</fullName>
        <label>Expected Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GC_Number_Detail__c</fullName>
        <inlineHelpText>If there are GC numbers, include detail here or write &quot;NO NUMBERS&quot; or &quot;GIFT CARDS&quot; if there are too many numbers to record.</inlineHelpText>
        <label>GC # Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Received_Merge_Field__c</fullName>
        <formula>IF(CONTAINS(UPPER(TEXT(GC_Status__c)), &quot;BN&quot;),
&quot;To facilitate pre-drive processing, please send your gift certificates as soon as possible to my attention at KCRW: 1900 Pico Blvd., Santa Monica CA 90405-1628. We request that the certificates be valid through March 31, 2012.&quot;,
&quot;&quot;) &amp; &quot;&quot; &amp;

IF(CONTAINS(UPPER(TEXT(GC_Status__c)),  &quot;BY&quot;),
&quot;We have received your certificates; thank you for sending them so quickly!&quot;,
&quot;&quot;) &amp; &quot;&quot; &amp;

IF(CONTAINS(UPPER(TEXT(GC_Status__c)), &quot;KY&quot;)  || CONTAINS(UPPER(TEXT(GC_Status__c)), &quot;KN&quot;),
&quot;As you requested, we will create your gift certificates.  They will be printed on ivory card stock and embossed with the KCRW seal for authenticity. Each will be valid through March 31, 2012. I am enclosing a copy for your records.&quot;,
&quot;&quot;) &amp; &quot;&quot; &amp;

IF(CONTAINS(UPPER(TEXT(GC_Status__c)), &quot;XX&quot;),
&quot;After the drive, we will provide you with a list of the names and addresses of the lucky members who will receive your premium.&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GC Received Merge Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Status__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>What is the status of the Gift Certificates? May be unnecessary as receiving status on the PO covers this.</inlineHelpText>
        <label>GC Status</label>
        <picklist>
            <picklistValues>
                <fullName>BN - Business GC NOT Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY - Business GC Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KN - KCRW GC Needs to be Produced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS - KCRW GC Sent for Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY - KCRW GC Rec&apos;d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX - Not Needed (Guest List)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN - CD/Product is Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_to_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Drive Premiums.</description>
        <inlineHelpText>Do we need to print the Gift Certificates for these?</inlineHelpText>
        <label>Need to Print?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_Units_Not_Received__c</fullName>
        <label>Num of Units Not Received</label>
        <summarizedField>Purchase_Order_Product__c.Unreceived_Quantity__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Units_Received__c</fullName>
        <label>Num of Units Received</label>
        <summarizedField>Purchase_Order_Product__c.Received_Quantity__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Number_Name__c</fullName>
        <displayFormat>PO-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>PO Number (Name)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Suggested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temp_Item_ID__c</fullName>
        <description>Temporary External ID for data load</description>
        <externalId>true</externalId>
        <label>Temp Item ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <inlineHelpText>What Account is providing these items, whether they are donating them or we are purchasing them?</inlineHelpText>
        <label>Vendor/Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Receiving PO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PO_Number_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Not_Received</fullName>
        <columns>NAME</columns>
        <columns>PO_Number_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All - Not Received</label>
    </listViews>
    <listViews>
        <fullName>All_Partially_Received</fullName>
        <columns>NAME</columns>
        <columns>PO_Number_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>Contact__c</columns>
        <columns>Confirm_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Partially Received</value>
        </filters>
        <label>All - Partially Received</label>
    </listViews>
    <listViews>
        <fullName>All_Received</fullName>
        <columns>NAME</columns>
        <columns>PO_Number_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>All - Received</label>
    </listViews>
    <listViews>
        <fullName>Category_Count</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>GC_Status__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Drive_Premiums_Purchase_Order</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>Drive_Campaign__c</field>
            <operation>contains</operation>
            <value>S11</value>
        </filters>
        <label>Category Count</label>
    </listViews>
    <listViews>
        <fullName>GC_Need</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>GC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GC_Status__c</field>
            <operation>equals</operation>
            <value>KN - KCRW GC Needs to be Produced</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Drive_Premiums_Purchase_Order</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>GC Need</label>
    </listViews>
    <listViews>
        <fullName>Status_Updated_on_PO</fullName>
        <columns>Status__c</columns>
        <columns>PO_Number_Name__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Drive_Campaign__c</field>
            <operation>contains</operation>
            <value>S11</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Confirmed</value>
        </filters>
        <label>Status Updated on PO</label>
    </listViews>
    <listViews>
        <fullName>received</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>GC_Status__c</columns>
        <columns>PO_Number_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Partially Received,Received</value>
        </filters>
        <filters>
            <field>GC_Status__c</field>
            <operation>notContain</operation>
            <value>IN - CD/Product is Here</value>
        </filters>
        <label>received</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receiving POs</pluralLabel>
    <recordTypes>
        <fullName>Drive_Premiums_Purchase_Order</fullName>
        <active>true</active>
        <description>Use this for managing Drive Premiums orders.</description>
        <label>Drive Premiums Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Order</fullName>
        <active>true</active>
        <description>This is the default Purchase Order for most receiving needs.</description>
        <label>Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ticket_Giveaways_Record_Type</fullName>
        <active>true</active>
        <description>This will be used to manage inventory on Tickets as well as alternates.</description>
        <label>Ticket Giveaways Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>